[gd_scene load_steps=10 format=3 uid="uid://raffq6dxknjp"]

[ext_resource type="Texture2D" uid="uid://dgcd2fgiafn8g" path="res://Assets/Pixel Adventure/Traps/Platforms/Brown Off.png" id="1_43vwx"]
[ext_resource type="Script" path="res://Scripts/Platforms/MovingPlatform.gd" id="1_np4gl"]
[ext_resource type="Texture2D" uid="uid://w767u5vj64d" path="res://Assets/Pixel Adventure/Traps/Platforms/Brown On (32x8).png" id="2_gbc4x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nukan"]
size = Vector2(30, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bie7"]
size = Vector2(30, 5)

[sub_resource type="Animation" id="Animation_de0sk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pkdh0"]
resource_name = "off"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_43vwx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatableBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_au2sp"]
resource_name = "on"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gbc4x")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatableBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jmxo8"]
_data = {
"RESET": SubResource("Animation_de0sk"),
"off": SubResource("Animation_pkdh0"),
"on": SubResource("Animation_au2sp")
}

[node name="MovingPlatform" type="Node2D"]
script = ExtResource("1_np4gl")
metadata/_edit_group_ = true

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
collision_layer = 512

[node name="Sprite2D" type="Sprite2D" parent="AnimatableBody2D"]
texture = ExtResource("2_gbc4x")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_nukan")

[node name="Area2D" type="Area2D" parent="AnimatableBody2D"]
collision_layer = 512
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D/Area2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_2bie7")
debug_color = Color(0.576471, 0.360784, 0.0705882, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jmxo8")
}

[connection signal="body_entered" from="AnimatableBody2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AnimatableBody2D/Area2D" to="." method="_on_area_2d_body_exited"]
